force-app/main/default/objects/Exception__c/Exception__c.object-meta.xml
<CustomObject>
    <label>Exception</label>
    <nameField>
        <label>Exception Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exceptions</pluralLabel>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <description>Master record type for all exceptions</description>
        <label>Master</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>