force-app/main/default/objects/Exception__c/fields/Acknowledged_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_DateTime__c</fullName>
    <description>When the exception was acknowledged</description>
    <label>Acknowledged DateTime</label>
    <type>DateTime</type>
</CustomField>