force-app/main/default/objects/Exception__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <description>Type of exception triggered</description>
    <label>Exception Type</label>
    <picklist>
        <picklistValues>
            <fullName>late_arrival</fullName>
            <label>Late Arrival</label>
        </picklistValues>
        <picklistValues>
            <fullName>missed_pickup</fullName>
            <label>Missed Pickup</label>
        </picklistValues>
        <picklistValues>
            <fullName>long_idle</fullName>
            <label>Long Idle</label>
        </picklistValues>
        <picklistValues>
            <fullName>offline</fullName>
            <label>Offline</label>
        </picklistValues>
        <picklistValues>
            <fullName>geofence_breach</fullName>
            <label>Geofence Breach</label>
        </picklistValues>
        <picklistValues>
            <fullName>hos_violation</fullName>
            <label>HOS Violation</label>
        </picklistValues>
        <picklistValues>
            <fullName>refused_load</fullName>
            <label>Refused Load</label>
        </picklistValues>
        <picklistValues>
            <fullName>mechanical_breakdown</fullName>
            <label>Mechanical Breakdown</label>
        </picklistValues>
        <picklistValues>
            <fullName>weather_delay</fullName>
            <label>Weather Delay</label>
        </picklistValues>
        <picklistValues>
            <fullName>stuck_in_traffic</fullName>
            <label>Stuck in Traffic</label>
        </picklistValues>
        <picklistValues>
            <fullName>quick_turnaround</fullName>
            <label>Quick Turnaround</label>
        </picklistValues>
    </picklist>
    <required>true</required>
    <type>Picklist</type>
</CustomField>