force-app/main/default/objects/Exception__c/fields/Load__c.field-meta.xml
<CustomField>
    <fullName>Load__c</fullName>
    <description>Link to the Load that triggered the exception</description>
    <label>Load</label>
    <referenceTo>Load__c</referenceTo>
    <relationshipLabel>Exceptions</relationshipLabel>
    <relationshipName>Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>