force-app/main/default/objects/Exception__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Internal notes on actions taken to resolve the exception</description>
    <label>Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>