force-app/main/default/objects/Exception__c/fields/Resolved_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Resolved_DateTime__c</fullName>
    <description>When the exception was resolved</description>
    <label>Resolved DateTime</label>
    <type>DateTime</type>
</CustomField>