force-app/main/default/objects/Exception__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Severity level: LOW, MEDIUM, HIGH, CRITICAL</description>
    <label>Severity</label>
    <picklist>
        <picklistValues>
            <fullName>LOW</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>MEDIUM</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>HIGH</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>CRITICAL</fullName>
        </picklistValues>
    </picklist>
    <required>true</required>
    <type>Picklist</type>
</CustomField>