force-app/main/default/objects/Exception__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current status of the exception (triggered, acknowledged, investigating, resolved, closed)</description>
    <label>Status</label>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>triggered</fullName><default>true</default><label>Triggered</label></value>
            <value><fullName>acknowledged</fullName><default>false</default><label>Acknowledged</label></value>
            <value><fullName>investigating</fullName><default>false</default><label>Investigating</label></value>
            <value><fullName>resolved</fullName><default>false</default><label>Resolved</label></value>
            <value><fullName>closed</fullName><default>false</default><label>Closed</label></value>
        </valueSetDefinition>
    </valueSet>
    <required>true</required>
    <type>Picklist</type>
</CustomField>