force-app/main/default/objects/Exception__c/fields/Triggered_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Triggered_DateTime__c</fullName>
    <description>When the exception was triggered</description>
    <label>Triggered DateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>